Доработал сервис, добавил тесты, запустил приложение.